[workspace]
members = ["prometric-derive", "prometric"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chainbound/prometric"
exclude = [".claude/", ".github/"]
readme = "README.md"
keywords = ["prometheus", "metrics", "derive"]
categories = ["development-tools"]

[workspace.dependencies]
# Metrics
prometheus = "0.14.0"

# Macro
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
darling = "0.21"

# Common linting rules
[workspace.lints]
rust.missing_debug_implementations = "warn"
# rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"
