[package]
name = "prometric"
description = "Metric types to use with the prometric-derive crate."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
exclude = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
prometheus = { workspace = true }

# Exporter
hyper = { version = "1.7.0", optional = true, features = ["http1", "server"] }
hyper-util = { version = "0.1.17", optional = true, features = ["tokio"] }
tokio = { version = "1.40.0", optional = true, features = ["net", "rt"] }

# Process
sysinfo = { version = "0.37.2", optional = true }

# Summary
arc-cell = {version = "0.3.3", optional = true }
metrics-util = { version = "0.20.0", optional = true }
metrics-exporter-prometheus = { version = "0.17.2", optional = true }
orx-concurrent-vec = { version = "3.10.0", optional = true }
parking_lot = { version = "0.12", optional = true }
quanta = { version = "0.12.6", optional = true }

[features]
default = ["exporter", "summary"]
# Expose HTTP exporter functionality with the `hyper` crate. Enabled by default.
exporter = ["dep:hyper", "dep:hyper-util", "dep:tokio"]
# Expose process metrics collection functionality with the `sysinfo` crate.
process = ["dep:sysinfo"]
# Expose a Summary functionality. Enabled by default
summary = ["dep:metrics-util", "dep:metrics-exporter-prometheus", "dep:parking_lot", "dep:quanta", "dep:orx-concurrent-vec", "dep:arc-cell"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
